Code changes in FindAllGuardTest